[workspace]
members = ["packages/*", "contracts/*"]

[profile.release.package.moneymarket]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false

[workspace.dependencies]
rhaki-cw-plus = "0.6.4"