[package]
name = "native-wrapper"
version = "0.0.0"
authors = ["BIG Labs", "Capapult PTE"]
edition = "2018"
description = "A Wrapper contract for native tokens"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
moneymarket = { path = "../../packages/moneymarket", default-features = false, version = "0.3.1"}
cosmwasm-bignumber = { path = "../../packages/bignumber"}
cw20 = "0.13.2"
protobuf = { version = "2", features = ["with-bytes"] }
cosmwasm-std = "1.0.0"
cosmwasm-storage = { version = "1.0.0", features = ["iterator"] }
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = "1.0.31"

[dev-dependencies]
cosmwasm-schema = "1.0.0"
terra-cosmwasm = { path = "../../packages/terra-cosmwasm"}

